# web-server/internal/app/app.go
@@ -8,6 +8,7 @@ import (
 	"github.com/aws/aws-sdk-go-v2/service/dynamodb"
 
 	"github.com/ke1ta1to/wallet-note/internal/auth"
+	"github.com/ke1ta1to/wallet-note/internal/category"
 	"github.com/ke1ta1to/wallet-note/internal/organization"
 	"github.com/ke1ta1to/wallet-note/internal/platform/router"
 	"github.com/ke1ta1to/wallet-note/internal/user"
@@ -17,10 +18,12 @@ func NewMux(db *dynamodb.Client, tableName string) *http.ServeMux {
 	orgRepo := organization.NewOrgRepo(db, tableName)
 	memRepo := organization.NewMembershipRepo(db, tableName)
 	orgSvc := organization.NewService(db, tableName)
+	catRepo := category.NewCategoryRepo(db, tableName)
 	mw := auth.NewMiddleware(memRepo)
 
 	return router.New(
 		organization.New(orgRepo, orgSvc, mw),
 		user.New(memRepo, orgRepo, mw),
+		category.New(catRepo, mw),
 	)
 }
